Remove listeners after they have fired